--- a/views/makers/winemakerindex.ejs
+++ b/views/makers/winemakerindex.ejs
@@ -45,7 +45,7 @@
         <% } %>
     </div> 
     <script>
-        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+         const maptilerApiKey = "<%- process.env.MAPTILER_API_KEY %>";
         const makers = { features: <%- JSON.stringify(makers) %>}
     </script>
     <script src="/javascripts/clusterMap.js"></script>
