--- a/views/makers/show.ejs
+++ b/views/makers/show.ejs
@@ -121,7 +121,7 @@
         </div>
     </div>
     <script>        
-        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';        
+        const maptilerApiKey = "<%- process.env.MAPTILER_API_KEY %>";        
     </script>
 
     <script>        
