update routes to work with enhanced passport.js security. Resolve package warnings. Update NewMaker Form & winemaker, cheesemaker language

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,8 +26,8 @@
         <h1>The Wine and Cheese App</h1>
         <div> 
         <p>
-            Find your local Cheese and Wine Makers in our peer-edited database.<br> Find your <b>NEW
-                FAVORITES</b>.<br> Support your local Cheese and Wine Maker.</p>
+            Find your local Cheese and Winemakers in our peer-edited database.<br> Find your <b>NEW
+                FAVORITES</b>.<br> Support your local Cheese and Winemaker.</p>
         <a href="/makers" class=" startBtn btn btn-success btn-lg ">Start Here</a> 
         </div>
         
