--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,8 +18,8 @@
                         Makers By Type
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/makers/cheesemakers">Cheese Makers</a></li>
-                        <li><a class="dropdown-item" href="/makers/winemakers">Wine Makers</a></li>
+                        <li><a class="dropdown-item" href="/makers/cheesemakers">Cheesemakers</a></li>
+                        <li><a class="dropdown-item" href="/makers/winemakers">Winemakers</a></li>
 
                     </ul>
                 </li>
