--- a/views/makers/cheesemakerindex.ejs
+++ b/views/makers/cheesemakerindex.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
     <div id="cluster-map"></div>
     <div class="container">
-        <h1 class="pHeading">Cheese Makers</h1>
+        <h1 class="pHeading">Cheesemakers</h1>
         <% for (let maker of makers){%>
             <%if(maker.makertype.toLowerCase()=='wine maker' ) {%>
                 <%} else {%>
