--- a/views/makers/index.ejs
+++ b/views/makers/index.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
 <div id="cluster-map"></div>
 <div class="container">
-  <h1 class="pHeading">All Wine and Cheese Makers</h1>
+  <h1 class="pHeading">All Wine and Cheesemakers</h1>
   <% for (let maker of makers){%>
   <div class="card mb-3">
     <div class="row">
