--- a/views/makers/winemakerindex.ejs
+++ b/views/makers/winemakerindex.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
     <div id="cluster-map"></div>
     <div class="container">
-        <h1 class="pHeading">Wine Makers</h1>
+        <h1 class="pHeading">Winemakers</h1>
         <% for (let maker of makers){%>
             <%if(maker.makertype.toLowerCase() == 'cheese maker') {%>            
             <%} else {%>
